# bmp

./: .gitignore  CMakeLists.txt
lib/: bmp.c  bmp.h
src/: main.c  main_new.c
